--- a/fiindmyspace/src/components/user/Login.module.css
+++ b/fiindmyspace/src/components/user/Login.module.css
@@ -8,26 +8,27 @@
 }
 
 .parentContainer {
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden; /* Evita desbordamientos */
+  align-items: center; */
+  /* height: 100vh;
+  width: 100vw; */
+  overflow: hidden; /*Evita desbordamientos */
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 1rem;
   background-color: #ffffff;
-  padding: 20px; /* Reducido para hacer el formulario más compacto */
+  padding: 2rem; /* Reducido para hacer el formulario más compacto */
   width: 30%;
-  height: 95%;
+  height: 90%;
   border-radius: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Añadido para un efecto de sombra */
   overflow: hidden; /* Evita desbordamientos internos */
+  justify-content: center;
 }
 
 ::placeholder {
@@ -44,13 +45,15 @@
 }
 
 .inputForm {
-  border: 1px solid #ccc; /* Borde gris claro */
-  border-radius: 8px; /* Bordes redondeados */
-  height: 50px; /* Altura estándar */
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  min-height: 50px;
+  /* border: 1px solid #ccc; Borde gris claro
+  border-radius: 8px; Bordes redondeados */
+  /* height: 50px; Altura estándar */
   display: flex;
   align-items: center;
-  padding-left: 10px; /* E
-  spaciado interno */
+  padding-left: 10px; /* Espaciado interno */
   transition: border-color 0.2s ease-in-out; /* Transición suave */
 }
 
@@ -100,7 +103,7 @@
   font-size: 15px;
   font-weight: 500;
   border-radius: 10px;
-  height: 50px;
+  min-height: 50px;
   width: 100%;
   cursor: pointer;
 }
@@ -187,3 +190,33 @@
   border-radius: 50%;
 }
 
+@media screen and (max-width: 450px) {
+  .form{
+    width: 90%;
+    height: 95vh; 
+  }
+}
+@media screen and (min-heigth: 670px) {
+  .inputForm{
+    height: 60px;
+  }
+
+}
+@media screen and (min-width: 450px) and (max-width: 800px) {
+  .form{
+    width: 75%;
+    height: 95vh;
+  }
+  .inputForm{
+    height: 50px;
+  }
+}
+@media screen and (min-width: 800px) and (max-width: 1024px) {
+  .form{
+    width: 50%;
+    height: 95vh;
+  }
+  .inputForm{
+    height: 50px;
+  }
+}
