--- a/fiindmyspace/src/components/user/Register.module.css
+++ b/fiindmyspace/src/components/user/Register.module.css
@@ -66,7 +66,7 @@
 .inputForm {
   border: 1px solid #ccc;
   border-radius: 8px;
-  height: 50px;
+  height: 3rem;
   display: flex;
   align-items: center;
   padding-left: 10px;
@@ -146,4 +146,24 @@
   height: 10px;
   background-color: #555555;
   border-radius: 50%;
+}
+
+@media screen and (max-width: 450px) {
+  .form{
+    width: 90%;
+    height: 95vh; 
+    justify-content: center;
+  }
+}
+@media screen and (max-heigth: 670px) {
+  .inputForm{
+    height: 60px;
+  }
+
+}
+@media screen and (min-width: 450px) and (max-width: 800px) {
+  .form{
+    width: 75%;
+    height: 95vh;
+  }
 }
