--- a/fiindmyspace/src/pages/home.module.css
+++ b/fiindmyspace/src/pages/home.module.css
@@ -290,7 +290,7 @@ ahora te puedes marchaar
   align-items: center;
   padding: 60px 15px;
 }
-
+/* nononono */
 .functionsTitle {
   font-size: 2.5rem;
   font-weight: bold;
