--- a/fiindmyspace/src/components/user/Login.module.css
+++ b/fiindmyspace/src/components/user/Login.module.css
@@ -45,7 +45,6 @@
 }
 
 .inputForm {
-  border: 1px solid #ccc;
   border-radius: 8px;
   min-height: 50px;
   border: 1px solid #ccc;/* Borde gris claro*/
@@ -58,6 +57,7 @@
 }
 
 .input {
+  border-radius: 8px;
   margin-left: 10px; /* Espaciado entre el ícono y el campo */
   border: none; /* Sin bordes internos */
   width: 100%; /* Ocupa todo el espacio disponible */
