--- a/fiindmyspace/src/pages/home.module.css
+++ b/fiindmyspace/src/pages/home.module.css
@@ -39,8 +39,8 @@
   max-width: 1000px;
   width: 100%;
   text-align: center;
-  padding: 0 20px;
-  margin: 10px 10px 10px 10px;/*Creo que era esto veremos*/
+  padding: 0;
+  margin: none;/*Creo que era esto veremos*/ /*no era eso pero bueno*/
 }/*creo que son los que están descentrados pero hay que encontrar el contenedor padre o crearlo*/
 
 .mainTitle {/*titulo. hay mas de uno revisar(?*/
