--- a/fiindmyspace/src/components/BannerUser.module.css
+++ b/fiindmyspace/src/components/BannerUser.module.css
@@ -2,7 +2,7 @@
 .headerContainer {
   position: fixed;
   top: -10px;
-  left: -0.5%;
+  left: -0.8%;
   transform: translateX(-50%);
   z-index: 1001;
   display: flex;
@@ -119,7 +119,7 @@
   flex-direction: column;
   gap: 8px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
-  margin: 80px 20px 0 20px;
+  margin: 80px 20px 0 -3px;
 }
 
 .sidebarFooter {
@@ -209,15 +209,15 @@
 /* Responsive Design */
 @media (max-width: 768px) {
   .headerContainer {
-    top: 15px;
-    left: 50%;
+    top: 22px;
+    left: 4%;
     transform: translateX(-50%);
   }
   
   .headerContainerOpen {
     left: 15px;
     transform: translateX(0);
-    gap: 12px;
+    gap: 380%;
   }
   
   .hamburger {
