--- a/fiindmyspace/src/components/BannerUser.module.css
+++ b/fiindmyspace/src/components/BannerUser.module.css
@@ -119,7 +119,7 @@
   flex-direction: column;
   gap: 8px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
-  margin: 80px 20px 0 -3px;
+  margin: 80px 0 0 -3px;
 }
 
 .sidebarFooter {
