--- a/fiindmyspace/src/pages/HomeUser.module.css
+++ b/fiindmyspace/src/pages/HomeUser.module.css
@@ -1,6 +1,12 @@
 .container {
+  width: 100%;
+  height: 100%;
   min-height: 100vh;
-  background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+  --color: #E1E1E1;
+  background-color: #F3F3F3;
+  background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
+      linear-gradient(90deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent);
+  background-size: 100px 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
